Lesson 10 (#11)
* Lesson 8: Add products and attributes (web & api)

* rebase Lesson_8

* fix

* Lesson 10: Add cart (web & api)

* Add documentation

* Fix cart total price

* total_price = 0

* Generate documentation
